# website_my_portfolio

./: .dockerignore  .envrc  .gitignore  AGENTS.md  Dockerfile  README.md  README.md:Zone.Identifier  docker-compose.yml  pyproject.toml  security_policy.md
.codex/: AGENTS.md  config.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy-pages.yml
agents/project_overview_creator/: 00_README.md  01_project_overview_creator.md  manifest.yaml
docs/: Davis Ryan's Portfolio.html  action_log.md  actual_content.md  analytics_projects.md  page_tree.md  project_overview.md  resume.md  workflow.md
docs/Davis Ryan's Portfolio_files/: css2  custom.css  site.css
infra/opentofu/: .terraform.lock.hcl  README.md  imports.tf.example  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
src/: header.js  index-jp.html  index.html  projects-jp.html  projects.html  resume-jp.html  resume.html  script.js  style.css  temp.ipynb
src/assets/resume/: README.md
